--- a/Exam/index.html
+++ b/Exam/index.html
@@ -150,6 +150,145 @@
                 </ul>
             </nav>
         </div>
+
+        <div class="container pt-5 guides-list" id="guides-list">
+            <div class="guides">
+                <p class="fs-2">Доступные гиды по маршруту: Маршрут не выбран</p>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <button class="btn btn-light btn-language dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">Язык экскурсии</button>
+                    <ul class="dropdown-menu language-list">
+                        <li><a class="dropdown-item" href="#">Язык экскурсии</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-md-4">
+                    <div class="row">
+                        <div class="col-12 text-center fs-4">
+                            Опыт работы
+                        </div>
+                        <div class="col-6">
+                            <label for="work-min-experience" class="form-label">От</label>
+                            <input class="form-control" id="work-min-experience" placeholder="">
+                        </div>
+                        <div class="col-6">
+                            <label for="work-max-experience" class="form-label">До</label>
+                            <input class="form-control" id="work-max-experience" placeholder="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 my-2">
+                    <button type="button" class="btn btn-light search-btn-guides">Найти</button>
+                </div>
+            </div>
+
+            <div class="py-3 row table-responsive mt-2">
+                <table class="table table-bordered table-hover">
+                    <thead class="">
+                        <tr>
+                            <th scope="col">Имя</th>
+                            <th scope="col">Языки</th>
+                            <th scope="col">Опыт работы</th>
+                            <th scope="col">Стоимость услуг в час</th>
+                            <th scope="col">Выбрать</th>
+                        </tr>
+                    </thead>
+                    <tbody class="table-guides">
+                        <!-- <tr class="fs-6">
+                            <th scope="row" class="fs-1 text-center"><span class="bi bi-person-rolodex"></span></th>
+                            <td>Mark</td>
+                            <td>Русский, Английский</td>
+                            <td>3 года</td>
+                            <td>Стоимость/час</td>
+                            <td class="">
+                                <button class="btn btn-light" type="button" aria-expanded="false">
+                                    Да
+                                </button>
+                            </td>
+                        </tr> -->
+                    </tbody>
+                </table>
+                <button type="button" class="btn btn-secondary text-warning checkout-route" data-bs-toggle="modal"
+                    data-bs-target="#addTask" data-action="show" disabled>Оформить заказ</button>
+            </div>
+        </div>
+
+        <div class="modal fade" id="addTask" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Оформление заявки</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+
+                    <div class="modal-body">
+                        <form id="create-task-form">
+                            <div class="mb-3 row">
+                                <label for="name" class="col-form-label col-md-4">Имя гида</label>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control-plaintext" readonly id="name" name="name">
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label for="desc" class="col-form-label col-md-4">Маршрут</label>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control-plaintext" readonly id="route" name="route">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6 col-md-4 mb-1">
+                                    <label for="date" class="mb-1">Дата экскурсии</label>
+                                    <input type="date" id="date" required>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <label for="time" class="mb-1">Время начала (каждые 30 минут)</label>
+                                    <input type="time" id="time" min="09:00" max="23:00" step="1800" value="09:00" required>
+                                </div>
+                                <div class="col-6 col-md-4 mb-2">
+                                    <label for="selectLength" class="mb-1">Длительность экскурсии</label>
+                                    <select id="selectLength" class="form-select" aria-label="Default select example">
+                                        <option value="1" selected>1 час</option>
+                                        <option value="2">2 часа</option>
+                                        <option value="3">3 часа</option>
+                                    </select>
+                                </div>
+                                <div class="col-6 my-2">
+                                    <label for="customRange2" class="form-label">Количество человек</label>
+                                    <input type="range" class="form-range" min="1" max="20" step="1" id="customRange2"
+                                        value="1">
+                                    <input type="text" class="form-control" id="number-people" name="number-people"
+                                        value="1" disabled>
+                                </div>
+                                <label for="flexSwitchCheckDefault" class="mb-1">Дополнительные опции:</label>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="option1">
+                                    <label class="form-check-label" for="option1">Использовать скидку для
+                                        школьников и студентов</label>
+                                </div>
+                                <div class="form-check form-switch mb-2">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="option2">
+                                    <label class="form-check-label" for="option2">Тематические сувениры для
+                                        посетителей</label>
+                                </div>
+                                <div class="mb-3 row mt-2">
+                                    <label for="name" class="col-form-label col-md-6">Итоговая стоимость:</label>
+                                    <div class="col-md-6 mt-md-2">
+                                        <input type="text" class="form-control-plaintext" readonly id="price"
+                                            name="price">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary back-btn" data-bs-dismiss="modal">Отмена</button>
+                        <button type="button" form="create-task-form"
+                            class="btn btn-primary create-btn">Оформить</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
   
     <footer>
@@ -176,7 +315,9 @@
 
     <script src="assets/js/index/allRoutes.js"></script>
     <script src="assets/js/index/click.js"></script>
+    <script src="assets/js/index/cost.js"></script>
     <script src="assets/js/index/create.js"></script>
+    <script src="assets/js/index/input.js"></script>
     <script src="assets/js/index/search.js"></script>
 
     <script src="assets/js/index/index.js"></script>
