--- a/Exam/index.html
+++ b/Exam/index.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0 ms-5 ms-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Личный кабинет</a>
+                            <a class="nav-link" href="personal_room.html">Личный кабинет</a>
                         </li>
                     </ul>
                 </div>
