--- a/Exam/personal_room.html
+++ b/Exam/personal_room.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
- <header class="header">
+<header class="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <div class="logo text-center mx-auto mx-md-5">
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0 ms-5 ms-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Личный кабинет</a>
+                            <a class="nav-link" href="index.html">Главная страница</a>
                         </li>
                     </ul>
                 </div>
@@ -142,12 +142,14 @@
                                 <div class="form-check form-switch form-switch-option1">
                                     <input class="form-check-input" type="checkbox" role="switch" id="option1">
                                     <label class="form-check-label" for="option1">Использовать скидку для
-                                        школьников и студентов</label>
+                                        школьников и студентов (Стоимость
+                                        уменьшается на 15%)</label>
                                 </div>
                                 <div class="form-check form-switch form-switch-option2 mb-2">
                                     <input class="form-check-input" type="checkbox" role="switch" id="option2">
                                     <label class="form-check-label" for="option2">Тематические сувениры для
-                                        посетителей</label>
+                                        посетителей (Стоимость увеличивается на 500 рублей для
+                                        каждого посетителя)</label>
                                 </div>
                                 <div class="mb-3 row mt-2">
                                     <label for="name" class="col-form-label col-md-6">Итоговая стоимость:</label>
@@ -195,7 +197,7 @@
             <hr class="border border-primary border-3 opacity-75">
             <div class="container py-4">
                 <div class="fs-4">Контактная информация</div>
-               
+
                 <div class="fs-6">
                     <div class="py-1"><i class="fa fa-envelope" aria-hidden="true"></i> Почта: globaltravel@yandex.ru</div>
                     <div class="py-1"><i class="fa fa-phone-square" aria-hidden="true"></i> Телефон: +7 (872) 57-04-95
